fix safari bug & grid overflow
Safari had the overflow of payment options out of the body.
Wallet grid was overflowing in horizontal direction by 1px.

--- a/app/_css/form.sass
+++ b/app/_css/form.sass
@@ -68,6 +68,7 @@ $bottom: 7px;
   line-height: 19px;
   box-sizing: border-box;
   padding: $top 0 $bottom $left;
+  margin: 0;
   position: relative;
   color: #424242;
 
