--- a/app/_css/modal.sass
+++ b/app/_css/modal.sass
@@ -76,6 +76,12 @@ body, html
     height: 24px;
     margin-bottom: 3px;
 
+#tab-wallet .grid
+  .item
+    &:nth-child(3n-1), &:last-child:nth-child(3n+1)
+      label
+        margin-right: 0px;
+
 .link
   text-decoration: underline;
   cursor: pointer
